--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,16 @@ target_include_directories(${PROJECT_NAME} PUBLIC include)
 # Windows has some extra code
 if (WIN32)
   target_sources(${PROJECT_NAME} PRIVATE src/platform/windows.cpp)
+  target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32.lib)
 endif()
 
-CPMAddPackage("gh:fmtlib/fmt#11.2.0")
-CPMAddPackage("gh:stephenberry/glaze@5.2.0")
+if (NOT TARGET fmt::fmt)
+  CPMAddPackage("gh:fmtlib/fmt#11.2.0")
+endif()
+if (NOT TARGET glaze::glaze)
+  CPMAddPackage("gh:stephenberry/glaze@5.5.4")
+endif()
+
 target_link_libraries(${PROJECT_NAME} PRIVATE fmt glaze::glaze)
 
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
